[package]
name = "rayca-gui"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
description = "Rayca GUI with egui"
license = "MIT"
readme = "README.md"

[dependencies]
rayca-core = { git = "https://github.com/fahien/rayca-core.git" }
rayca-pipe = { git = "https://github.com/fahien/rayca-pipe.git" }
memoffset = "0.9.0"
egui = "0.31.*"
